refactor: Refactored components to use Redux
Also began implementing API request for coin data

--- a/src/components/styles/topbar.css
+++ b/src/components/styles/topbar.css
@@ -1,4 +1,4 @@
-.topbar {
+.topBar {
   border-bottom: 2px solid rgb(34, 44, 49);
   /* border-top: 2px solid rgb(34, 44, 49); */
   color: rgb(249, 155, 19);
