--- a/src/components/styles/coinList.css
+++ b/src/components/styles/coinList.css
@@ -1,3 +1,10 @@
 .coinList {
-  height: 200vh;
+  align-items: center;
+  display: flex;
+  flex: 1 1 auto;
+  flex-direction: column;
+  height: 400px;
+  overflow: scroll;
+  padding: 10px 0;
+  width: 100%;
 }
