--- a/src/components/styles/coinList.css
+++ b/src/components/styles/coinList.css
@@ -1,8 +1,7 @@
 .coinList {
   display: flex;
-  flex: 1 1 auto;
+  /* flex: 1 1 auto; */
   flex-direction: column;
   overflow: scroll;
-  padding: 10px 0;
   width: 100%;
 }
