--- a/src/components/styles/coinListItem.css
+++ b/src/components/styles/coinListItem.css
@@ -31,8 +31,10 @@ a:hover {
   padding-top: 5px;
 }
 
-.coinListItemActiveMiddle {
-  padding: 10px 0;
+.coinListItemActiveInvestorTitle {
+  color: var(--grey-blue);
+  font-size: 18px;
+  text-align: center;
   width: 100%;
 }
 
@@ -40,7 +42,6 @@ a:hover {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin-bottom: 10px;
 }
 .coinListItemActiveLinks > div {
   align-items: center;
@@ -52,6 +53,22 @@ a:hover {
   margin-top: 5px;
   padding: 5px 2px;
   width: 150px;
+}
+
+.coinListItemActiveMiddle {
+  padding: 10px 0;
+  width: 100%;
+}
+.coinListItemActiveMiddle > div {
+  border-bottom: 1px solid var(--border-color);
+  padding: 10px 0;
+}
+.coinListItemActiveMiddle > div:last-child {
+  border-bottom: none;
+}
+
+.coinListItemActiveStatTitle {
+  color: var(--grey-blue);
 }
 
 .coinListItemContainer {
