--- a/src/components/styles/coinListItem.css
+++ b/src/components/styles/coinListItem.css
@@ -9,6 +9,22 @@ a:hover {
   text-decoration: underline;
 }
 
+button {
+  border: 1px solid var(--grey-blue);
+  background-color: var(--dark-blue);
+  color: var(--gold);
+  font-size: 18px;
+  outline: none;
+  /* transition: 0.1; */
+}
+button:hover {
+  cursor: pointer;
+  transform: scale(1.02);
+}
+button:active {
+  transform: scale(.98);
+}
+
 .coinListItem {
   border-bottom: 1px solid var(--border-color);
   display: flex;
@@ -24,11 +40,26 @@ a:hover {
 .coinListItemActive {
   background-color: rgba(34,44,49,.5);
   border-bottom: 1px solid var(--border-color);
-  display: flex;
+  /* display: flex; */
   min-height: fit-content;
   padding-bottom: 5px;
   padding-left: 10px;
   padding-top: 5px;
+}
+
+.coinListItemActiveContainer {
+  display: flex;
+}
+
+.coinListItemActiveEdit {
+  background-color: var(--dark-blue);
+  border-color: var(--border-color);
+  color: var(--grey-blue);
+  float: right;
+  height: 50px;
+  position: relative;
+  right: 10px;
+  width: 50px;
 }
 
 .coinListItemActiveInvestorTitle {
@@ -92,21 +123,12 @@ a:hover {
   width: 200px;
 }
 .coinListItemName > button {
-  border: 1px solid var(--grey-blue);
-  background-color: var(--dark-blue);
-  color: var(--gold);
-  font-size: 18px;
   height: 50px;
-  outline: none;
-  /* transition: 0.1; */
   width: 150px;
 }
 .coinListItemName > button:hover {
-  cursor: pointer;
-  transform: scale(1.02);
 }
 .coinListItemName > button:active {
-  transform: scale(.98);
 }
 
 .coinListItemTicker {
