--- a/src/components/styles/coinListItem.css
+++ b/src/components/styles/coinListItem.css
@@ -106,6 +106,13 @@ button:active {
   color: var(--grey-blue);
 }
 
+.coinListItemActiveSummary > form > {
+  color: var(--grey-blue);
+}
+.coinListItemActiveSummary textarea {
+  background-color: var(-dark-blue) !important;
+}
+
 .coinListItemContainer {
   display: flex;
   flex: 1 1 auto;
