feat: Began refactoring <TopBar />
Added some basic re-styling (some filler).
Also added add coin button that scrolls to the bottom of .coinList when clicked

--- a/src/components/styles/coinList.css
+++ b/src/components/styles/coinList.css
@@ -1,6 +1,6 @@
 .coinList {
   display: flex;
-  /* flex: 1 1 auto; */
+  flex: 1 1 auto;
   flex-direction: column;
   overflow: scroll;
   width: 100%;
