--- a/src/components/styles/app.css
+++ b/src/components/styles/app.css
@@ -1,9 +1,5 @@
 :root {
-  --border-color: rgb(34, 44, 49);
-  --dark-blue: rgb(7, 14, 21);
-  --gold: rgb(249, 155, 19);
-  --grey-blue: rgb(85, 114, 128);
-  --white: rgb(201, 210, 215);
+  /*see ../index.cs*/
 }
 
 .app {
