--- a/src/components/styles/topbar.css
+++ b/src/components/styles/topbar.css
@@ -1,9 +1,34 @@
+button {
+  font-size: 18px;
+  height: 50px;
+  min-width: 50px;;
+}
+button:hover {
+  cursor: pointer;
+  transform: scale(1.02);
+}
+button:active {
+  transform: scale(.98);
+}
+
+.futureSearchBar {
+  background-color: var(--gold);
+  margin: 20px 50px;
+  width: 100%;
+}
+
 .topBar {
   border-bottom: 2px solid var(--border-color);
   /* border-top: 2px solid rgb(34, 44, 49); */
   color: var(--gold);
-  flex: 0 1 auto;
+  /* display: flex; */
+  flex: 1 1 auto;
   font-size: 48px;
   padding: 10px;
   text-align: right;
+}
+
+.topBarContainer {
+  display: flex;
+  flex-direction: row-reverse;
 }
