--- a/src/components/styles/topbar.css
+++ b/src/components/styles/topbar.css
@@ -12,7 +12,7 @@ button:active {
 }
 
 .futureSearchBar {
-  background-color: var(--gold);
+  /* background-color: var(--gold); */
   margin: 20px 50px;
   width: 100%;
 }
